--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
       <div class="form">
         <div class="intro">
           <p>
-            This is not a real online service! Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Necessitatibus, commodi!
+            This is not a real online service! Just a project for The Odin
+            Project Course
           </p>
-          <p>Sign up <i>now</i> to get started. You know you want to.</p>
+          <p>Sign up <i>now</i> to get started.</p>
+          <p>You <i>know</i> you want to.</p>
         </div>
         <div class="sign-up-form">
           <label for="first_name">
